tests/tests/snapshots/test__serde_conversions__serde-conversions-format-phases-adjacent-variant-alias.snap
---
source: tests/tests/serde_conversions.rs
expression: adjacent
---
// This file has been generated by Specta. Do not edit this file manually.
export type AdjacentVariantAlias = AdjacentVariantAlias_Serialize | AdjacentVariantAlias_Deserialize;

export type AdjacentVariantAlias_Deserialize = { kind: "Value"; data: string } | { kind: "OldValue"; data: string };

export type AdjacentVariantAlias_Serialize = { kind: "Value"; data: string };
