tests/tests/snapshots/test__serde_conversions__serde-conversions-format-phases-exports-field-only-phased-override.snap
---
source: tests/tests/serde_conversions.rs
assertion_line: 331
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type FieldOnlyPhasedOverride = FieldOnlyPhasedOverride_Serialize | FieldOnlyPhasedOverride_Deserialize;

export type FieldOnlyPhasedOverride_Deserialize = {
	value: number,
};

export type FieldOnlyPhasedOverride_Serialize = {
	value: string,
};
