tests/tests/snapshots/test__serde_conversions__serde-conversions-format-phases-field-alias.snap
---
source: tests/tests/serde_conversions.rs
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type FieldAlias = FieldAlias_Serialize | FieldAlias_Deserialize;

export type FieldAlias_Deserialize = {
	required: boolean,
} & ({
	value: string,
} | {
	old_value: string,
});

export type FieldAlias_Serialize = {
	required: boolean,
	value: string,
};
