tests/tests/snapshots/test__serde_conversions__serde-conversions-format-phases-internal-variant-alias.snap
---
source: tests/tests/serde_conversions.rs
expression: internal
---
// This file has been generated by Specta. Do not edit this file manually.
export type InternalVariantAlias = InternalVariantAlias_Serialize | InternalVariantAlias_Deserialize;

export type InternalVariantAlias_Deserialize = { kind: "Value"; value: string } | { kind: "OldValue"; value: string };

export type InternalVariantAlias_Serialize = { kind: "Value"; value: string };
