tests/tests/snapshots/test__serde_conversions__serde-conversions-format-phases-multiple-field-aliases.snap
---
source: tests/tests/serde_conversions.rs
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type FieldMultipleAliases = FieldMultipleAliases_Serialize | FieldMultipleAliases_Deserialize;

export type FieldMultipleAliases_Deserialize = ({
	value: string,
} | {
	old_value: string,
} | {
	legacy_value: string,
});

export type FieldMultipleAliases_Serialize = {
	value: string,
};
