tests/tests/snapshots/test__serde_conversions__serde-conversions-format-phases-multiple-variant-aliases.snap
---
source: tests/tests/serde_conversions.rs
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type VariantMultipleAliases = VariantMultipleAliases_Serialize | VariantMultipleAliases_Deserialize;

export type VariantMultipleAliases_Deserialize = "Value" | "OldValue" | "LegacyValue";

export type VariantMultipleAliases_Serialize = "Value";
