tests/tests/snapshots/test__serde_conversions__serde-conversions-format-phases-option-is-none-omits-null.snap
---
source: tests/tests/serde_conversions.rs
assertion_line: 433
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type DefaultedSkipSerializingIfOnly = DefaultedSkipSerializingIfOnly_Serialize | DefaultedSkipSerializingIfOnly_Deserialize;

export type DefaultedSkipSerializingIfOnly_Deserialize = {
	value?: string | null,
};

export type DefaultedSkipSerializingIfOnly_Serialize = {
	value?: string,
};

export type SkipSerializingIfOnly = SkipSerializingIfOnly_Serialize | SkipSerializingIfOnly_Deserialize;

export type SkipSerializingIfOnly_Deserialize = {
	value: string | null,
};

export type SkipSerializingIfOnly_Serialize = {
	value?: string,
};
