tests/tests/snapshots/test__serde_conversions__serde-conversions-format-phases-splits-container-and-dependents.snap
---
source: tests/tests/serde_conversions.rs
assertion_line: 215
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type IntoOnly = IntoOnly_Serialize | IntoOnly_Deserialize;

export type IntoOnly_Deserialize = {
	value: number,
};

export type IntoOnly_Serialize = Wire;

export type Parent = Parent_Serialize | Parent_Deserialize;

export type Parent_Deserialize = {
	child: IntoOnly_Deserialize,
};

export type Parent_Serialize = {
	child: IntoOnly_Serialize,
};

export type Wire = {
	value: number,
};
