tests/tests/snapshots/test__serde_conversions__serde-conversions-format-phases-variant-alias.snap
---
source: tests/tests/serde_conversions.rs
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type VariantAlias = VariantAlias_Serialize | VariantAlias_Deserialize;

export type VariantAlias_Deserialize = "Value" | "OldValue";

export type VariantAlias_Serialize = "Value";
