tests/tests/snapshots/test__serde_conversions__serde-conversions-format-unified-field-alias-with-flatten.snap
---
source: tests/tests/serde_conversions.rs
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type FieldAliasWithFlatten = ({
	value: string,
} | {
	old_value: string,
}) & FlattenedAliasInner;

export type FlattenedAliasInner = {
	nested: boolean,
};
