tests/tests/snapshots/test__serde_conversions__serde-conversions-format-unified-field-alias.snap
---
source: tests/tests/serde_conversions.rs
expression: field
---
// This file has been generated by Specta. Do not edit this file manually.
export type FieldAlias = {
	required: boolean,
} & ({
	value: string,
} | {
	old_value: string,
});
