tests/tests/snapshots/test__serde_conversions__serde-conversions-format-unified-many-field-aliases.snap
---
source: tests/tests/serde_conversions.rs
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type ManyFieldAliases = {
	first?: string,
	second?: string,
	third?: string,
	fourth?: string,
	old_first?: string,
	old_second?: string,
	old_third?: string,
	old_fourth?: string,
};
